--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,9 +1,19 @@
 
 
-<html>
-    <body>
-<video width="320" height="240" controls>
-  <source src="ebchwmwayp.avi" type="video/avi">
-  
-Your browser does not support the video tag.
-</video></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Specify Alternate Sources for video Element in HTML</title>
+</head>
+<body>
+	<video controls="controls" width="340" height="200">
+        <source src={{ url_for('static', filename="butter.mp4") }} type="video/mp4">
+        <source src={{ url_for('static', filename="butter.ogv") }} type="video/ogg">
+        Your browser does not support the HTML5 Video element.
+    </video>
+</body>
+</html>                            
+
+
+
