new file:   __pycache__/code.cpython-35.pyc 	modified:   app.py 	modified:   code.py 	modified:   network/__pycache__/models.cpython-35.pyc 	modified:   network/__pycache__/xception.cpython-35.pyc 	modified:   static/butter.avi 	new file:   static/check.avi 	new file:   static/check.mp4 	modified:   templates/hello.html

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<video controls="controls" width="340" height="200">
-        <source src={{ url_for('static', filename="butter.mp4") }} type="video/mp4">
+        <source src={{ url_for('static', filename="butter.avi") }} type="video/avi">
         <source src={{ url_for('static', filename="butter.ogv") }} type="video/ogg">
         Your browser does not support the HTML5 Video element.
     </video>
