--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,19 +1,13 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Specify Alternate Sources for video Element in HTML</title>
+    <title>Deepfake</title>
 </head>
 <body>
-	<video controls="controls" width="340" height="200">
-        <source src={{ url_for('static', filename="butter.avi") }} type="video/avi">
-        <source src={{ url_for('static', filename="butter.ogv") }} type="video/ogg">
-        Your browser does not support the HTML5 Video element.
-    </video>
+        
+        <embed src={{fname}} download/>
 </body>
-</html>                            
-
+</html>
 
 
