--- a/templates/upload.html
+++ b/templates/upload.html
@@ -84,6 +84,32 @@
   </form>
 </section>
 
+  <center><p><h1> OR </h1></p></center>
+  
+  <section id="example2">
+  <form action="/"  method="POST" enctype="multipart/form-data" id="url">
+    <div class="container" >
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <label class="control-label">Enter URL</label>
+           
+            <div class="dropzone-wrapper">
+              <div class="dropzone-desc">
+              <input type="url" name="youtube_link" placeholder="URL" autocomplete="off" required>
+			<button type="submit" class="btn btn-primary ">Submit</button>
+			</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
+    </div>
+  </form>
+  
+  
+</section>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
