graph and csv with avi output

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,14 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Deepfake</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+    table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width:10%;
+    height:10%;
+    align=right;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color:white;
+  padding: 3px;
+  
+  font-size: 1px;
+  color: white;
+}
+
+/* Container for flexboxes */
+section {
+  display: -webkit-flex;
+  display: flex;
+}
+
+/* Style the navigation menu */
+nav {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+/* Style the content */
+article {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
+.divScroll {
+overflow:scroll;
+height:500px;
+width:900px;
+}
+</style>
 </head>
+
 <body>
-        
-        <embed src={{fname}} download/>
-	<img src={{iname}} height="500" width="900" >
-</body>
-</html>
+<h1>{{fname}}</h1>
+<h1>{{oname}}</h1>
+<header>
+<embed src={{fname}} download/>
+</header>
+<section>
 
+<div class="divScroll">
 
+{% for table in tables %}
+            {{titles[loop.index]}}
+            {{ table|safe }}
+{% endfor %}
+</table></div>
+<article>
+    <img src={{iname}} height="500" width="900" ></article></section>
+
+</body></html>
