video visible,graph,csv for file upload

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -95,7 +95,11 @@ width:900px;
 <h1>{{fname}}</h1>
 <h1>{{oname}}</h1>
 <header>
-<embed src={{fname}} download/>
+<video class="a1"  width=400px height=500px controls >
+  <source src={{fname}} type="video/mp4" download>
+ <source src={{oname}}  type="video/ogg">
+  Your browser does not support the video tag.</div>
+</video>
 </header>
 <section>
 
