--- a/templates/hello.html
+++ b/templates/hello.html
@@ -85,32 +85,90 @@ footer {
 }
 .divScroll {
 overflow:scroll;
-height:500px;
-width:900px;
+height:450px;
+width:100%;                
+
+}
+#leftbox { 
+                align:center;
+                width:100%;
+                height:500px;
+                display: inline-block; 
+            } 
+            #middlebox{ 
+                float:left;  
+                width:100%; 
+                height:280px; 
+                overflow:scroll; 
+         } 
+            #rightbox{ 
+                float:right; 
+                width:100%; 
+                height:280px; 
+                 position: absolute;
+  left: 50%;
+  margin-left: -50px;
+            } 
+            h2{ 
+                color:green; 
+                text-align:center; 
+            } 
+             h4{ 
+                color:red; 
+                text-align:center; 
+            } 
+            .center1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+}
+ .center2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.center3 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
 }
 </style>
 </head>
 
 <body>
-<h1>{{fname}}</h1>
-<h1>{{oname}}</h1>
 <header>
-<video class="a1"  width=400px height=500px controls >
-  <source src={{fname}} type="video/mp4" download>
- <source src={{oname}}  type="video/ogg">
-  Your browser does not support the video tag.</div>
-</video>
+    
 </header>
-<section>
 
+
+    <div>
+    <h2>File Tested Successfully</h2>
+    <div class="leftbox">
+        <h4 > Input File</h2>
+<video class="center2"  width=500px height=300px controls >
+  <source src={{fname}} type="video/mp4" >
+  <source src={{oname}} type="video/ogg" >
+  Your browser does not support the video tag.
+</video>
+</div>
+<article>
+<div class="rightbox">
+    <h4>Result Graph</h4>
+    <img src={{iname}} height="500" width="850" class="center1" >
+</div>
+</article>
 <div class="divScroll">
-
+<h4>Frame Ratio</h4>
+<div class="center3">
 {% for table in tables %}
             {{titles[loop.index]}}
             {{ table|safe }}
 {% endfor %}
-</table></div>
-<article>
-    <img src={{iname}} height="500" width="900" ></article></section>
+</div>
+</div>
+</div>
 
 </body></html>
