--- a/templates/upload.html
+++ b/templates/upload.html
@@ -78,6 +78,7 @@
       <div class="row">
         <div class="col-md-12">
           <button type="submit" class="btn btn-primary pull-right">Upload</button>
+	  <font color="red"><h4>*{{error}}</h3></font>
         </div>
       </div>
     </div>
