--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2373,13 +2373,10 @@ ul {
   width: 100%;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
   top: 0;
-  background-color: #ff0000;
+  background-color: #212529;
 }
 
-/* line 179, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
-.menu_fixed .active_color {
-  color: #ff0000 !important;
-}
+
 
 /* line 185, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
 .dropdown .dropdown-menu {
