--- a/templates/upload.html
+++ b/templates/upload.html
@@ -77,7 +77,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <button type="submit" class="btn btn-primary pull-right">Upload</button>
+          <button type="submit" id="submitButton2"  class="btn btn-primary pull-right">Upload</button>
 	  <font color="red"><h4>*{{error}}</h3></font>
         </div>
       </div>
@@ -98,7 +98,7 @@
             <div class="dropzone-wrapper">
               <div class="dropzone-desc">
               <input type="url" name="youtube_link" placeholder="URL" autocomplete="off" required>
-			<button type="submit" class="btn btn-primary ">Submit</button>
+			<button type="submit"  id="submitButton"  class="btn btn-primary ">Submit</button>
 			</div>
             </div>
           </div>
@@ -115,6 +115,17 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script  src="static/js/function.js"></script>
+<script>
+document.getElementById("submitButton").addEventListener("click", myFunction);
 
+function myFunction() {
+    document.getElementById('submitButton').disabled = true;
+}
+document.getElementById("submitButton2").addEventListener("click", myFunction2);
+
+function myFunction2() {
+    document.getElementById('submitButton2').disabled = true;
+}
+</script>
 </body>
 </html>
