--- a/templates/upload.html
+++ b/templates/upload.html
@@ -77,7 +77,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <button type="submit" id="submitButton2"  class="btn btn-primary pull-right" onclick="this.disabled=true; this.form.submit();">Upload</button>
+          <button type="submit" id="filebutton"  class="btn btn-primary pull-right" onclick="filefunction()">Upload</button>
 	  <font color="red"><h4>*{{error}}</h3></font>
         </div>
       </div>
@@ -98,7 +98,7 @@
             <div class="dropzone-wrapper">
               <div class="dropzone-desc">
               <input type="url" name="youtube_link" placeholder="URL" autocomplete="off" required>
-			<button type="submit"  id="submitButton"  class="btn btn-primary" onclick="this.disabled=true; this.form.submit();">Submit</button>
+			<button type="submit"  id="urlbutton"  class="btn btn-primary" onclick="urlfunction()">Submit</button>
 			</div>
             </div>
           </div>
@@ -115,5 +115,19 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script  src="static/js/function.js"></script>
+<script>
+function filefunction() {
+document.getElementById("filebutton").disabled = true;
+document.getElementById("urlbutton").disabled = true;
+document.getElementById("filebutton").form.submit();
+}
+
+function urlfunction(){
+document.getElementById("urlbutton").disabled = true;
+document.getElementById("filebutton").disabled = true;
+document.getElementById("urlbutton").form.submit(); 
+}
+</script>
+
 </body>
 </html>
